objects/AcctSeed__AvaTax_License__c/AcctSeed__AvaTax_License__c.object-meta.xml
<CustomObject>
    <label>AvaTax License</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AvaTax Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>