objects/AcctSeed__AvaTax_License__c/fields/AcctSeed__Active_AvaTax_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Active_AvaTax_Endpoint__c</fullName>
    <inlineHelpText>AvaTax Only: Select to connect to AvaTax’s Production or Sandbox environment.</inlineHelpText>
    <label>Active AvaTax Endpoint</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox</fullName>
                <default>true</default>
                <label>Sandbox</label>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>