objects/AcctSeed__AvaTax_License__c/fields/AcctSeed__AvaTax_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AvaTax_Account_ID__c</fullName>
    <inlineHelpText>AvaTax Only: Account ID on your AvaTax Account’s Settings</inlineHelpText>
    <label>AvaTax Account ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>