objects/AcctSeed__AvaTax_License__c/fields/AcctSeed__AvaTax_License_Key__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AvaTax_License_Key__c</fullName>
    <inlineHelpText>AvaTax Only: License key given by AvaTax</inlineHelpText>
    <label>AvaTax License Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>